// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is no input for datepicker 1`] = `
<div>
  <label
    className="datePickerLabel"
  />
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <input
        className="datepicker"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders correctly with all props for datepicker 1`] = `
<div>
  <label
    className="datePickerLabel"
    htmlFor="dealine"
  >
    Deadline
  </label>
  <div
    className="react-datepicker-wrapper"
  >
    <div
      className="react-datepicker__input-container"
    >
      <input
        className="datepicker"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        readOnly={false}
        type="text"
        value="06/11/2021"
      />
    </div>
  </div>
</div>
`;
